plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}


group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'



	// MySQL Driver (For MySQL)
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Spring Boot Data JPA (Includes Jakarta Persistence API)
	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'


	// Jakarta Validation (For @Valid and @NotNull Annotations)
	implementation("jakarta.validation:jakarta.validation-api:3.0.2")
	// Jakarta Persistence API (JPA)
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	// Jakarta Servlet API (Required for Web Applications)
	implementation("jakarta.servlet:jakarta.servlet-api:6.0.0")
	// Lombok (Boilerplate Reduction)
	compileOnly 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'

	testCompileOnly 'org.projectlombok:lombok:1.18.36'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
	// Spring Boot Starter Test (JUnit & Mockito)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core'

}

tasks.named('test') {
	useJUnitPlatform()
}
